syntax = "proto3";

package park;

service CarParkService {
    rpc ProcessCommand (CommandRequest) returns (CommandResponse);
}

message CommandRequest {
    string command = 1;
}

message CommandResponse {
    string result = 1;
}
